--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
-<form>
-    <textarea name = "text" rows="10" cols="5"></textarea><br>
+<h1>Input your text below:</h1>
+
+<form method="" action= "counter">
+    <textarea name ="text" rows="20" cols="100"></textarea><br>
     <input type="submit"/>
 
 </form>
