--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <h1>Input your text below:</h1>
 
-<form method="" action= "counter">
+<form method="GET" action= "counter">
     <textarea name ="text" rows="20" cols="100"></textarea><br>
     <input type="submit"/>
 
