--- a/templates/counter.html
+++ b/templates/counter.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Word Counter</title>
+    <style>
+        body {
+            text-align: center; /* Center align text within the body */
+        }
+        .content {
+            margin-top: 100px; /* Add margin space from the top */
+        }
+    </style>
+</head>
 <body>
-    <div style="text-align: center; margin-top: 125px;">
+    <div class="content">
         <h1>The amount of words is {{ amount }}</h1>
     </div>
+    <button onclick="window.location.href='/'">Go to Home</button>
 </body>
 </html>
