added static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+<link rel="stylesheet" href ="{% static 'style.css' %}">
+
 <h1>Input your text below:</h1>
 
 <form method="POST" action= "counter">
